Use backstretch.js for hero image as ios does not use background:cover correctly

--- a/_sass/hero.scss
+++ b/_sass/hero.scss
@@ -1,11 +1,3 @@
-body {
-  background-image: url("/img/hero.jpg");
-  background-position: center center;
-  background-repeat: no-repeat;
-  background-attachment: fixed;
-  background-size: cover;
-}
-
 .hero_section {
   height: calc(100vh - 50px);
   width: 100%;
